--- a/API_Bitcoin/View/Page_Index.xaml
+++ b/API_Bitcoin/View/Page_Index.xaml
@@ -5,8 +5,45 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:API_Bitcoin.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="900">
+             d:DesignHeight="800" d:DesignWidth="1200">
     <Grid Background="#F68E5F">
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="7*"/>
+        </Grid.RowDefinitions>
+
+        <!--****************************************************** Bouton Index fear *********************************************-->
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid Grid.Column="2" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Button Name="BTN_7d" Grid.Column="0" Content="7d" Height="50" Width="50" FontSize="20" Click="BTN_7d_Click"/>
+                <Button Name="BTN_1m" Grid.Column="1" Content="1m" Height="50" Width="50" FontSize="20" Click="BTN_1m_Click"/>
+                <Button Name="BTN_1y" Grid.Column="2" Content="1y" Height="50" Width="50" FontSize="20" Click="BTN_1y_Click"/>
+                <Button Name="BTN_All" Grid.Column="3" Content="All" Height="50" Width="50" FontSize="20" Click="BTN_All_Click"/>
+            </Grid>
+        </Grid>
+
+        <!--****************************************************** Image Index fear *********************************************-->
+        <Grid Grid.Row="1">
+            <Image Name="IMG_Index"  Height="300" Width="700" Source="C:\Users\SLAB60\AppData\Local\Temp\8452ad05-1702-409f-91b0-31fc50e57a30_Ressources.zip.a30\Ressources\Image\Index_All.jpeg"/>
+        </Grid>
+
     </Grid>
 </UserControl>
